--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -7,13 +7,16 @@
   - name: update repo index
     apt:
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
   - name: install appache2 package
     apt:
       name: apache2
       state: absent
+    when: ansible_distribution == "Ubuntu"
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: absent
+    when: ansible_distribution == "Ubuntu"
