--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,8 +7,8 @@
   - name: install appache2 package
     apt:
       name: 
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
+        - apache2
+        - libapache2-mod-php
       state: latest
       update_cache: yes
 
