--- a/sites.yml
+++ b/sites.yml
@@ -22,6 +22,15 @@
       state: latest
       update_cache: yes
 
+  - name: copy html files for site
+    tags: apache,apache2,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 - hosts: file_servers
   become: true
   tasks:
